Revision history for Text-VimColor

{{$NEXT}}

0.20      2012-08-11T02:05:18Z

  - Releasing as stable.

0.19-TRIAL 2012-07-28T03:44:54Z

  - Use IPC::Open3 for portability instead of doing fork/exec manually.
  - Various other fixes to attempt to make this usable on Windows.
    Thanks to Yasuhiro Matsumoto (mattn) for helping to port to Windows (gh-5).

0.18      2012-07-21T02:22:55Z

  [Bug Fix]
  - bin/text-vimcolor: Exit after printing usage when --help is specified
    (previous version continued to wait for STDIN).
    Thanks to Vyacheslav Matyukhin for the pull req (gh-6).

  [Installaion]
  - Try to show any available version information before aborting Makefile.PL

0.17      2012-03-22T02:49:27Z

  - Minor installation and test fixes for older systems

0.16      2012-03-21T17:38:45Z

  [Installation]
  - Simplify version detection using vim script

  [Testing]
  - Mark encoding tests as TODO tests for now (still under development)

0.15      2012-03-18T23:43:36Z

  [Performance]
  - Remove extraneous vim statement that caused delays on
    some files.  Thanks to Joe Mullally (jhackworth)
    for finding this and for the vim profiling tips (gh-2).

  [Installation]
  - Abort Makefile.PL before writing Makefile if minimum vim not found
  - Try not to hang the installation if an old vim is found
  - Lower Term::ANSIColor requirement to 1.03
    and make bright colors normal if Term::ANSIColor version < 3

  [Documentation]
  - Document that the minimum vim version is 6.
    (It has been that way since 2003.)

  [Testing]
  - Allow debugging based on TEXT_VIMCOLOR_DEBUG env var
  - Attempt to make tests more portable across vim versions
    (addressing rt-75829 and a few sparse smoke reports).
  - Reorganize the test suite increasing coverage and number.

0.14      2011-10-20T17:09:53Z

  - Add test to confirm fix of rt-50646.
  - Silence 'untie' warnings.

0.13      2011-08-15T23:10:00Z

  [Prereqs]
  - Exit Makefile.PL early if `vim` fails to execute.