@@ -2,6 +2,8 @@ Revision history for Text-VimColor
 
 {{$NEXT}}
 
+  - Add 'extra_vim_options' to be able to append options to the defaults
+
 0.20      2012-08-11T02:05:18Z
 
   - Releasing as stable.
